<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="80dp"
    android:paddingRight="80dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:id="@+id/online_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_item">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#fff"
            android:text="@string/setting_title_online_subtitle"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textColor="#6D9DD9"
            android:layout_marginLeft="10dp"
            android:text="@string/setting_desc_online_subtitle"/>
        <TextView
            android:id="@+id/online_subtitle_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@mipmap/file_list_separator"></View>
    <LinearLayout
        android:id="@+id/clean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_item">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#fff"
            android:text="@string/setting_title_clear"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#6D9DD9"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/setting_desc_clear"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@mipmap/file_list_separator"></View>
    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_item">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#fff"
            android:text="@string/setting_title_about"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#6D9DD9"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/setting_desc_about"/>
        <TextView
            android:id="@+id/about_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
